further rename tweaks

--- a/404.page
+++ b/404.page
@@ -138,7 +138,7 @@ Try to remember... Other options:
 - ["Ero-Anime: Manga Comes Alive"](/doc/anime/2010-sarrazin){.backlink-not .icon-not}
 - [The "Screwfly Solution" Solution: Bi-Sexuality](/screwfly){.backlink-not .icon-not}
 - [Predicting Google closures](/google-shutdown "Branwen 2013"){.backlink-not .icon-not}
-- [`/The-Narrowing-Circle`](/narrowing-circle){.backlink-not .icon-not}
+- [`/narrowing-circle`](/narrowing-circle){.backlink-not .icon-not}
 - [The Notenki Memoirs: Studio Gainax And The Men Who Created Evangelion](/doc/anime/eva/2002-takeda-notenkimemoirs "Takeda 2010"){.backlink-not .icon-not}
 - [Who Wrote The _Death Note_ Script?](/death-note-script "Branwen 2009"){.backlink-not .icon-not}
 - [Rubrication Design Examples](/red "Branwen 2019"){.backlink-not .icon-not}
