--- a/404.page
+++ b/404.page
@@ -173,7 +173,7 @@ Try to remember... Other options:
 - [Cat Psychology & Domestication: Are We Good Owners?](/review/cat "Branwen 2018"){.backlink-not .icon-not}
 - [Wooden pillows](/wood-pillow "‘Wooden Pillow’, Branwen 2008"){.backlink-not .icon-not}
 - [`/docs/psychology/index`](/doc/psychology/index "'Essays', N/A 2009"){.backlink-not .icon-not}
-- [`/notes/Scaling`](/note/scaling "‘Machine Learning Scaling’, Branwen 2021"){.backlink-not .icon-not}
+- [`/note/scaling`](/note/scaling "‘Machine Learning Scaling’, Branwen 2021"){.backlink-not .icon-not}
 - [Origins of Innovation: Bakewell & Breeding](/review/bakewell "Branwen 2018"){.backlink-not .icon-not}
 - [Conscientiousness and online education](/conscientiousness "‘Conscientiousness & Online Education’, Branwen 2012"){.backlink-not .icon-not}
 - [The Ups and Downs of the Hope Function](/doc/statistics/bayes/1994-falk "‘The Ups and Downs of the Hope Function In a Fruitless Search’, Falk et al 2012"){.backlink-not .icon-not}
