--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -515,11 +515,6 @@ body {
         margin: 0.55em 0 0.45em 0;
         border-top: 1px dotted var(--GW-sidebar-horizontal-rule-color);
     }
-    #sidebar a.patreon {
-        font-size: 0.9em;
-        white-space: nowrap;
-        line-height: 1.35;
-    }
 }
 
 @media only screen and (max-width: 649px) {
@@ -2817,7 +2812,7 @@ GW.notificationCenter = {
                 removed - if the named event is fired by the condition evaluates
                 to false).
 
-                If not set, defaults to false (ie. by default a handler is
+                If not set, defaults to false (i.e., by default a handler is
                 not removed after an event is fired once, but will continue to
                 be invoked each time the named event fires and the condition,
                 if any, evaluates as true).
@@ -2852,7 +2847,7 @@ GW.notificationCenter = {
                   ‘pseudo-phase’, handlers are called in the order in which they
                   were added.)
 
-        When an event is fired, any handlers registered for that event (ie.
+        When an event is fired, any handlers registered for that event (i.e.,
         members of the array which is the value for that event’s name in the
         eventHandlers dictionary) are called in array order. (If a condition is
         specified for any given handler, the handler function is only called if
@@ -2876,28 +2871,28 @@ GW.notificationCenter = {
         as follows: `[ "foo", "bar" ]`. When the GW.exampleDidHappen event 
         fires, event handlers are called in the following order:
 
-		1. Handlers assigned to be called before all other phases (ie. those 
+		1. Handlers assigned to be called before all other phases (i.e., those 
 		   with ‘<’ as the value of their ‘phase’ key in their event handler 
 		   options dictionary)
-        2. Handlers assigned to be called before the ‘foo’ phase (ie.
+        2. Handlers assigned to be called before the ‘foo’ phase (i.e.,
            those with ‘<foo’ as the value of their ‘phase’ key in their
            event handler options dictionary)
-        3. Handlers assigned to be called during the ‘foo’ phase (ie.
+        3. Handlers assigned to be called during the ‘foo’ phase (i.e.,
            those with ‘foo’ as the value of their ‘phase’ key in their
            event handler options dictionary)
-        4. Handlers assigned to be called after the ‘foo’ phase (ie.
+        4. Handlers assigned to be called after the ‘foo’ phase (i.e.,
            those with ‘>foo’ as the value of their ‘phase’ key in their
            event handler options dictionary)
         5. Handlers assigned to be called before the ‘bar’ phase
-           (ie. those with ‘<bar’ as the value of their ‘phase’ key
+           (i.e., those with ‘<bar’ as the value of their ‘phase’ key
            in their event handler options dictionary)
         6. Handlers assigned to be called during the ‘bar’ phase
-           (ie. those with ‘bar’ as the value of their ‘phase’ key
+           (i.e., those with ‘bar’ as the value of their ‘phase’ key
            in their event handler options dictionary)
         7. Handlers assigned to be called after the ‘bar’ phase
-           (ie. those with ‘>bar’ as the value of their ‘phase’ key
+           (i.e., those with ‘>bar’ as the value of their ‘phase’ key
            in their event handler options dictionary)
-        8. Handlers assigned to be called after all other phases (ie. those 
+        8. Handlers assigned to be called after all other phases (i.e., those 
 		   with ‘>’ as the value of their ‘phase’ key in their event handler 
 		   options dictionary)
 
@@ -2915,7 +2910,7 @@ GW.notificationCenter = {
         - ‘f’
             Event handler function. When the event fires, this function will be
             called. Not that if a condition is specified in the event handler
-            options (ie. if a condition function is provided as the value of
+            options (i.e., if a condition function is provided as the value of
             the ‘condition’ key in the event handler options dictionary), then
             the handler function will be called only if the condition function
             evaluates true).
@@ -2949,7 +2944,7 @@ GW.notificationCenter = {
         }
 
         /*  If there’s not already a handlers array for the given event (which
-            may be, eg. because no event handlers have yet been registered
+            may be, e.g., because no event handlers have yet been registered
             for this event), create the array.
          */
         if (GW.notificationCenter.eventHandlers[eventName] == null)
@@ -3031,13 +3026,13 @@ GW.notificationCenter = {
                 - ‘before’ [key]
                     Boolean value; true if the handler at the given index is
                     assigned to run before the specified phase, false otherwise
-                    (ie. if it’s instead assigned to run either during or
+                    (i.e., if it’s instead assigned to run either during or
                     after the specified phase).
 
                 - ‘after’ [key]
                     Boolean value; true if the handler at the given index is
                     assigned to run after the specified phase, false otherwise
-                    (ie. if it’s instead assigned to run either before or
+                    (i.e., if it’s instead assigned to run either before or
                     during the specified phase).
 
                 (Note that for an event handler which has not been assigned to
@@ -3230,7 +3225,7 @@ GW.notificationCenter = {
         string identifying the function, browser event, or other context which
         caused the given event to be fired (such as ‘DOMContentLoaded’ or
         ‘Annotations.load’). In addition to any ways in which it may be used 
-        by an event handler, this string (ie. the value of the ‘source’ key) 
+        by an event handler, this string (i.e., the value of the ‘source’ key) 
         is (if present) included in the console message that is printed when the 
         event is fired.
      */
@@ -3242,7 +3237,7 @@ GW.notificationCenter = {
         GW.notificationCenter.currentEvents.push(eventName);
 
         /*  Store event name in info dictionary, so that event handlers can
-            access it. (This permits, eg. the same handler to handle multiple
+            access it. (This permits, e.g., the same handler to handle multiple
             events, and conditionally select behavior based on which event is
             calling the handler.)
          */
@@ -3422,7 +3417,7 @@ function togglePageScrolling(enable) {
         arguments), allows the assignment of arbitrary CSS properties to the
         page on the basis of scroll state. This is purely a convenience (which
         may be useful if, for example, some styling needs to change on the basis
-        of change in page scroll state, eg. modifying the appearance of scroll
+        of change in page scroll state, e.g. modifying the appearance of scroll
         bars). No specific CSS properties are needed in order for this function
         to work properly.
      */
