--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -334,7 +334,7 @@
 /**********/
 /* COLORS */
 /**********/
-/* colors are now in /static/css/colors.css or dark-mode.css */
+/* colors are now in /static/css/colors.css (light-mode) or /include/dark-mode-GENERATED.css + /include/components/dark-mode-adjustments.css +/include/components/colors-dark-GENERATED.css (dark-mode) */
 
 /*************/
 /* VARIABLES */
@@ -1640,9 +1640,10 @@ span.smallcaps {
 /*************/
 /* DARK MODE */
 /*************/
-/*  See /static/js/dark-mode.js and /static/css/dark-mode.css; this allows the
-    user to toggle at runtime.
- */
+/*  See /static/js/dark-mode.js and
+/include/dark-mode-GENERATED.css + /include/components/dark-mode-adjustments.css +/include/components/colors-dark-GENERATED.css
+This allows the user to toggle dark-mode at runtime.
+*/
 
 
 /****************/
