LI: rename the Google SVG to avoid ublock blocklists killing the icon (as it's a widespread icon, they are unlikely to remove the blacklist rules were I to bother asking)

--- a/include/inlined-graphical-linkicon-styles.html
+++ b/include/inlined-graphical-linkicon-styles.html
@@ -8,7 +8,7 @@ a[data-link-icon='dropbox'] { --link-icon-url: url('/static/img/icon/dropbox.svg
 a[data-link-icon='erowid'] { --link-icon-url: url('/static/img/icon/erowid.svg'); }
 a[data-link-icon='facebook'] { --link-icon-url: url('/static/img/icon/facebook.svg'); }
 a[data-link-icon='github'] { --link-icon-url: url('/static/img/icon/github.svg'); }
-a[data-link-icon='google'] { --link-icon-url: url('/static/img/icon/google.svg'); }
+a[data-link-icon='alphabet'] { --link-icon-url: url('/static/img/icon/alphabet.svg'); }
 a[data-link-icon='miri'] { --link-icon-url: url('/static/img/icon/miri.svg'); }
 a[data-link-icon='internetarchive'] { --link-icon-url: url('/static/img/icon/internetarchive.svg'); }
 a[data-link-icon='springerlink'] { --link-icon-url: url('/static/img/icon/springerlink.svg'); }
@@ -66,6 +66,7 @@ a[data-link-icon='hoover-institution'] { --link-icon-url: url('/static/img/icon/
 a[data-link-icon='magnifying-glass'] { --link-icon-url: url('/static/img/icon/magnifying-glass.svg'); }
 a[data-link-icon='stat-news'] { --link-icon-url: url('/static/img/icon/stat-news.svg'); }
 a[data-link-icon='anthropic'] { --link-icon-url: url('/static/img/icon/anthropic.svg'); }
+a[data-link-icon='laion'] { --link-icon-url: url('/static/img/icon/laion.svg'); }
 a[data-link-icon='arrow-up-left'] { --link-icon-url: url('/static/img/icon/arrow-up-left.svg'); }
 a[data-link-icon='arrow-down-right'] { --link-icon-url: url('/static/img/icon/arrow-down-right.svg'); }
 a[data-link-icon='arrow-right'] { --link-icon-url: url('/static/img/icon/arrow-right.svg'); }
