--- a/template/default.html
+++ b/template/default.html
@@ -151,7 +151,7 @@
           <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not" id="anonymous-feedback"><span class="smallcaps">[Submit Anonymous Feedback]</span></a></p>
           <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
 
-          <a class="include icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a>
+          <a class="include include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a>
         </div>
 
       </article>
