--- a/css/links.css
+++ b/css/links.css
@@ -1049,6 +1049,7 @@ a[data-link-icon='stat-news']::after {
 
     opacity: 1;
 }
+
 a[data-link-icon='magnifying-glass']::after {
     --link-icon-size: 0.8em;
     --link-icon-offset-y: 0em;
@@ -1063,6 +1064,13 @@ a[data-link-icon='anthropic']::after {
     --link-icon-offset-x: -0em;
 
     opacity: 0.6
+}
+
+a[data-link-icon='laion']::after {
+    --link-icon-size: 0.7em;
+    --link-icon-offset-y: 0.1em;
+
+    opacity: 0.7;
 }
 
 /*=------------------=*/
